Updated packages and Swagger expansion.
